--- a/Auto Layout Practice/Base.lproj/Main.storyboard
+++ b/Auto Layout Practice/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,13 +18,63 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8yg-2S-hcw" userLabel="Top Container">
+                                <rect key="frame" x="20" y="0.0" width="627" height="187.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="artBoard" translatesAutoresizingMaskIntoConstraints="NO" id="beV-uq-coR">
+                                        <rect key="frame" x="193.5" y="30" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="52i-lB-CQl"/>
+                                            <constraint firstAttribute="height" constant="128" id="ehx-K4-Jyi"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="beV-uq-coR" firstAttribute="centerX" secondItem="8yg-2S-hcw" secondAttribute="centerX" id="AJj-eu-EgV"/>
+                                    <constraint firstItem="beV-uq-coR" firstAttribute="centerY" secondItem="8yg-2S-hcw" secondAttribute="centerY" id="U2E-dB-BVP"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jYR-Q1-4i0" userLabel="Bottom Container">
+                                <rect key="frame" x="0.0" y="187.5" width="667" height="187.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notebook" translatesAutoresizingMaskIntoConstraints="NO" id="qZM-Az-xk7">
+                                        <rect key="frame" x="213.5" y="30" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="KV1-Yc-gfg"/>
+                                            <constraint firstAttribute="height" constant="128" id="cyi-hQ-nWW"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="qZM-Az-xk7" firstAttribute="centerX" secondItem="jYR-Q1-4i0" secondAttribute="centerX" id="C5I-7z-ZWF"/>
+                                    <constraint firstItem="qZM-Az-xk7" firstAttribute="centerY" secondItem="jYR-Q1-4i0" secondAttribute="centerY" id="r9t-0e-KIF"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="8yg-2S-hcw" secondAttribute="trailing" id="3rt-pb-qx3"/>
+                            <constraint firstItem="jYR-Q1-4i0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5w5-PH-58A"/>
+                            <constraint firstItem="jYR-Q1-4i0" firstAttribute="top" secondItem="8yg-2S-hcw" secondAttribute="bottom" id="5zo-QN-MPx"/>
+                            <constraint firstItem="jYR-Q1-4i0" firstAttribute="height" secondItem="8yg-2S-hcw" secondAttribute="height" id="HO3-FV-TSL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jYR-Q1-4i0" secondAttribute="bottom" id="MYQ-Rq-Qjf"/>
+                            <constraint firstItem="8yg-2S-hcw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Pct-2F-Z67"/>
+                            <constraint firstItem="8yg-2S-hcw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sqb-V3-03L"/>
+                            <constraint firstAttribute="trailing" secondItem="jYR-Q1-4i0" secondAttribute="trailing" id="v5s-zt-lEo"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="artBoard" width="433" height="533"/>
+        <image name="notebook" width="373" height="527"/>
+    </resources>
 </document>
